# cec-dsg

./: .coveragerc  CHANGELOG.rst  CONTRIBUTING.rst  README.md  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
src/cec_dsg/: __init__.py  __tests__.py  dsg.py  skeleton.py
tests/: conftest.py  test_skeleton.py
